--- a/Views/Autenticacion/Index.cshtml
+++ b/Views/Autenticacion/Index.cshtml
@@ -5,6 +5,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title> MIREME CAMBIE </title>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <style>
