Se cambio el titulo de la pag de login

--- a/Views/Autenticacion/Index.cshtml
+++ b/Views/Autenticacion/Index.cshtml
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> YA NO QUIERO CAMBIAR </title>
+    <title> Página de Login </title>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <style>
