Un poco weeb el cambio to be honest

--- a/Views/Autenticacion/Index.cshtml
+++ b/Views/Autenticacion/Index.cshtml
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Página de Login </title>
+    <title> LOGIN~DESU </title>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <style>
