Se agrega la pagina de empleado para consultar cobros, se hace el autenticacion de si hay un usuario logged, se crea la lista.

--- a/Views/Autenticacion/Index.cshtml
+++ b/Views/Autenticacion/Index.cshtml
@@ -35,7 +35,7 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Contraseña</label>
-                    <input name="contrasena" type="password" class="form-control" required />
+                    <input name="Contrasena" type="password" class="form-control" required />
                 </div>
                 <div class="d-grid">
                     <button type="submit" class="btn btn-primary">Enviar</button>
