Sigue sin servir

--- a/Views/Empleado/Index.cshtml
+++ b/Views/Empleado/Index.cshtml
@@ -6,6 +6,8 @@
 
 <h2>Gestionar Cobros</h2>
 
+@*Filtro para empleados*@
+
 <form method="get" class="row g-3 mb-4">
     <div class="col-md-4">
         <input type="text" name="nombreCliente" class="form-control" placeholder="Nombre del Cliente" value="@Request["nombreCliente"]" />
