--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -11,12 +11,10 @@
     <thead>
         <tr>
             <th># Cobro</th>
-            <th>Casa</th>
-            <th>Mes</th>
-            <th>Año</th>
+            <th>Nombre de Casa</th>
+            <th>Propietario</th>
+            <th>Periodo</th>
             <th>Estado</th>
-            <th>Monto</th>
-            <th>Fecha de Pago</th>
         </tr>
     </thead>
     <tbody>
@@ -25,11 +23,9 @@
             <tr>
                 <td>@item.Id_cobro</td>
                 <td>@item.Nombre_casa</td>
-                <td>@item.Mes</td>
-                <td>@item.Anno</td>
+                <td>@item.Nombre_cliente</td>
+                <td>@item.Periodo</td>
                 <td>@item.Estado</td>
-                <td>@item.Monto.ToString("C")</td>
-                <td>@item.Fecha_pagada?.ToString("dd/MM/yyyy")</td>
             </tr>
         }
     </tbody>
