--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -7,6 +7,15 @@
 
 <h2>Mis Cobros</h2>
 
+<br />
+
+@*Boton agregar un nuevo cobro*@
+
+<div class="mb-3 text-end">
+    @Html.ActionLink("Nuevo Cobro", "Crear", "Usuario", null, new { @class = "btn btn-success" })
+</div>
+
+
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
