--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -24,6 +24,7 @@
             <th>Propietario</th>
             <th>Periodo</th>
             <th>Estado</th>
+            <th>Consultar</th>
         </tr>
     </thead>
     <tbody>
@@ -35,6 +36,9 @@
                 <td>@item.Nombre_cliente</td>
                 <td>@item.Periodo</td>
                 <td>@item.Estado</td>
+                <td>
+                    @Html.ActionLink("Consultar", "Detalle", "Cobros", new { id = item.Id_cobro }, new { @class = "btn btn-info btn-sm" })
+                </td>
             </tr>
         }
     </tbody>
