--- a/Views/Empleado/Index.cshtml
+++ b/Views/Empleado/Index.cshtml
@@ -28,7 +28,7 @@
 
 @*Boton de agregar un nuevo cobro*@
 <div class="mb-3 text-end">
-    @Html.ActionLink("Nuevo Cobro", "Crear", "Empleado")
+    @Html.ActionLink("Nuevo Cobro", "Crear", "Empleado", null, new { @class = "btn btn-success" })
 </div>
 
 <table class="table table-bordered table-striped">
