--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -12,7 +12,7 @@
 @*Boton agregar un nuevo cobro*@
 
 <div class="mb-3 text-end">
-    @Html.ActionLink("Nuevo Cobro", "Crear", "Usuario", null, new { @class = "btn btn-success" })
+    @Html.ActionLink("Nuevo Cobro", "Crear", "Empleado", null, new { @class = "btn btn-success" })
 </div>
 
 
