Se agregan gestionar casas y servicios, tanto controladores, como vistas y en el layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
                     @if (Session["es_empleado"] != null && (int)Session["es_empleado"] == 1)
                     {
                         <li>@Html.ActionLink("Consultar Cobros", "Index", "Empleado", null, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("Gestionar Servicios", "Index", "GestionarServicios", null, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("Gestionar Casas", "Index", "GestionarCasas", null, new { @class = "nav-link" })</li>
                     }
 
                     @if (Session["id_persona"] != null)
