--- a/Views/GestionarServicios/Index.cshtml
+++ b/Views/GestionarServicios/Index.cshtml
@@ -8,7 +8,7 @@
 
 @*Boton de agregar un nuevo servicio*@
 <div class="mb-3 text-end">
-    @Html.ActionLink("Nuevo Servicio", "Crear", "GestionarServicios", null, new { @class = "btn btn-success" })
+    @Html.ActionLink("Nuevo Servicio", "CrearServicio", "GestionarServicios", null, new { @class = "btn btn-success" })
 </div>
 
 <table class="table table-bordered table-striped">
@@ -32,7 +32,7 @@
                 <td>@item.Nombre_categoria</td>
                 <td>@item.Estado</td>
                 <td>
-                    @Html.ActionLink("Consultar", "Detalle", "GestionarServicios", new { id = item.Id_servicio }, new { @class = "btn btn-info btn-sm" })
+                    @Html.ActionLink("Consultar", "CrearServicio", "GestionarServicios", new { id = item.Id_servicio }, new { @class = "btn btn-info btn-sm" })
                 </td>
             </tr>
         }
