--- a/Views/GestionarCasas/Index.cshtml
+++ b/Views/GestionarCasas/Index.cshtml
@@ -8,7 +8,7 @@
 
 @*Boton de agregar un nuevo servicio*@
 <div class="mb-3 text-end">
-    @Html.ActionLink("Nuevo Casa", "Crear", "GestionarCasas", null, new { @class = "btn btn-success" })
+    @Html.ActionLink("Nuevo Casa", "CrearCasa", "GestionarCasas", null, new { @class = "btn btn-success" })
 </div>
 
 <table class="table table-bordered table-striped">
@@ -36,7 +36,7 @@
                 <td>@item.Fecha_construccion.ToString("MM-dd-yyyy")</td>
                 <td>@item.Estado</td>
                 <td>
-                    @Html.ActionLink("Consultar", "Detalle", "GestionarCasas", new { id = item.Id_casa }, new { @class = "btn btn-info btn-sm" })
+                    @Html.ActionLink("Consultar", "EditarCasa", "GestionarCasas", new { id = item.Id_casa }, new { @class = "btn btn-info btn-sm" })
                 </td>
             </tr>
         }
