editar cobro completo, mejoras visuales.. gracias chatgpt xd

--- a/Views/GestionarCasas/CrearCasa.cshtml
+++ b/Views/GestionarCasas/CrearCasa.cshtml
@@ -2,7 +2,7 @@
 
 @{
     bool esEdicion = Convert.ToBoolean(ViewBag.EsConsulta);
-    ViewBag.Title = esEdicion ? "Editar Casa" : "Crear Casa";
+    ViewBag.Title = esEdicion ? "Modificar Casa" : "Crear Casa";
 }
 
 <h2>@ViewBag.Title</h2>
