--- a/Views/GestionarServicios/CrearServicio.cshtml
+++ b/Views/GestionarServicios/CrearServicio.cshtml
@@ -2,7 +2,7 @@
 
 @{
     bool esEdicion = Convert.ToBoolean(ViewBag.EsConsulta);
-    ViewBag.Title = esEdicion ? "Editar Servicio" : "Crear Servicio";
+    ViewBag.Title = esEdicion ? "Modificar Servicio" : "Crear Servicio";
 }
 
 <h2>@ViewBag.Title</h2>
